--- a/jp/study-design-2.qmd
+++ b/jp/study-design-2.qmd
@@ -251,7 +251,7 @@ Keywords: outcome, simulation
 :::
 
 ::: voice-father
-お父さん「うん。たとえばさ、データを要約するための指標として、割合（proportion）と率（rate）ってのがある。日常生活でもよく使うでしょ？交通事故の発生率とか。でも、日常では、割合と率の違いを意識しないよね。でも、統計の世界では、割合は2項分布のパラメータ、率はPoisson分布のパラメータなんだ」
+お父さん「うん。たとえばさ、これは覚えてほしいんだけど、**割合（proportion）**と**率（rate）**っていう指標のがある。日常生活でもよく使うでしょ？交通事故の発生率とか。でも、日常では、割合と率の違いを意識しないよね。でも、統計の世界では、割合は2項分布のパラメータ、率はPoisson分布のパラメータなんだ」
 :::
 
 ::: voice-daughter
@@ -267,11 +267,11 @@ Keywords: outcome, simulation
 :::
 
 ::: voice-father
-お父さん「教科書どおりじゃなくていいんだ。"あ、これは正規分布っぽい連続データだから、このあたりの関数かな"とか、0/1のデータだから、このへんの関数かなって、感覚で結びつけられるといいよ。Rの関数もずっと覚えやすくなる」
+お父さん「教科書どおりじゃなくていいんだ。"あ、これは正規分布っぽい連続データだから、このあたりの関数かな"とか、0/1のデータだから、このへんの関数かなって、感覚で結びつけられるといいよ。そうするとRの関数もずっと覚えやすくなる」
 :::
 
 ::: voice-daughter
-私「なるほどね。データの型と分布をイメージできれば、丸暗記不要ってことね。そいつははかどるわ」
+私「なるほどね。データの型と分布をイメージできれば、R関数丸暗記不要ってことね。そいつははかどるわ」
 :::
 
 ::: voice-father
@@ -303,7 +303,7 @@ Keywords: outcome, simulation
 :::
 
 ::: voice-daughter
-私「なるほど。やっとスッキリした。今まで毎回インストールしなきゃいけないのかなって思ってた」
+私「なるほど。ちょっとスッキリした。今まで毎回インストールしなきゃいけないのかなって思ってた」
 :::
 
 ::: voice-father
