--- a/jp/logistic-regression-1.qmd
+++ b/jp/logistic-regression-1.qmd
@@ -175,7 +175,7 @@ a:hover {
 :::
 :::::::::::::::::::::::::::::::::
 
-| パラメータ | 自由度 | 推定値 | 標準誤差 | 95%信頼区間   | χ2    | p値    |
+| パラメータ | 自由度 | 推定値 | 標準誤差 | 95%信頼区間   | $\chi^2$ | p値    |
 |------------|--------|--------|----------|---------------|-------|--------|
 | Intercept  | 1      | -27.25 | 3.03     | -33.20～21.30 | 80.55 | \<0.01 |
 | STOMA      | 1      | 1.41   | 1.54     | -16.1～4.45   | 0.84  | 0.3588 |
@@ -316,13 +316,13 @@ glm(y ~ x1 + x2, family = poisson(), data = dat)
 ::: {.callout-note collapse="true" title="答えはこちら"}
 -   **正解は4です**
 
-一般化線型モデルはロジスティック回帰を一般化したもので、「リンク関数」を変えることで、さまざまな指標を計算できます（田中2022）。
+一般化線型モデルはロジスティック回帰を一般化したもので、「リンク関数」を変えることで、さまざまな指標を計算できます（田中2022）。詳しくはのちのエピソードで述べますが、リンク関数は、ロジスティック回帰でいえば、リスク$\pi$を関数$g(\pi)$を用いて変換しています。
 
-リスク差を求めるには、g(π)=π つまり恒等関数を指定します。
+リスク差を求めるには、$g(\pi)=\pi$つまり恒等関数を指定します。
 
-リスク比を求めるには、g(π)=log⁡(π) つまり対数関数を指定します。
+リスク比を求めるには、$g(\pi)=\log(\pi)$ つまり対数関数を指定します。
 
-ハザード比を求めるには、g(π)=log{-log⁡(1-π)} つまり補2重対数（complementary log-log）関数を指定します。
+ハザード比を求めるには、$g(\pi)=\log\{-\log⁡(1-\pi)\}$つまり補2重対数（complementary log-log）関数を指定します。
 :::
 
 
