--- a/jp/study-design-3.qmd
+++ b/jp/study-design-3.qmd
@@ -420,10 +420,12 @@ OS、DFS、RFSは、特に術後補助化学療法の有効性を評価すると
 
 - Fleming TR and DeMets DL. Surrogate end points in clinical trials: are we being misled? Ann Intern Med 1996;125(7):605-13
 
-### エピソード
+### エピソードとRスクリプト
 
 - [A Story of Coffee Chat and Research Hypothesis](study-design-1.qmd)
 - [Data Have Types: A Coffee-Chat Guide to R Functions for Common Outcomes](study-design-2.qmd)
 - [A First Step into Survival and Competing Risks Analysis with R](study-design-3.qmd)
 - [Outcomes: The Bridge from Data Collection to Analysis]
 - [When Bias Creeps In: Selection, Information, and Confounding in Clinical Surveys]
+
+- [study-design.R](../from-coffee-chat-to-r/study-design.R)
