--- a/en/study-design-1.qmd
+++ b/en/study-design-1.qmd
@@ -413,10 +413,12 @@ When formulating study design, the Latin expression “ceteris paribus” often 
 The concept of “ceteris paribus” is very close to the idea of **comparability** between groups — one of the key themes of the story.
 :::
 
-### Episodes
+### Episodes and R-script
 
 - [A Story of Coffee Chat and Research Hypothesis](study-design-1.qmd)
 - [Data Have Types: A Coffee-Chat Guide to R Functions for Common Outcomes](study-design-2.qmd)
 - [A First Step into Survival and Competing Risks Analysis with R]
 - [Outcomes: The Bridge from Data Collection to Analysis]
 - [When Bias Creeps In: Selection, Information, and Confounding in Clinical Surveys]
+
+- [study-design.R](../from-coffee-chat-to-r/study-design.R)
