--- a/about/index.qmd
+++ b/about/index.qmd
@@ -6,17 +6,30 @@
 }
 </style>
 
-# About Shiro Tanaka
+## About Shiro Tanaka
 
 <div class="about-intro">
 <img src="../image/portrait.jpg" width="130" style="border-radius: 12px; float:right; margin-left:1rem;"/>
 
 Shiro Tanaka is a biostatistician and currently Professor of Clinical Biostatistics at the Graduate School of Medicine, Kyoto University.
 
-He has served as a trial statistician in translational research at Kyoto University Hospital, as well as in nationwide clinical trials in pediatric oncology and osteoporosis. He teaches graduate courses on statistics, clinical trials, and meta-analysis.
+He has served as a trial statistician in translational research at Kyoto University Hospital, as well as in nationwide clinical trial groups in oncology (JCOG), pediatric oncology (JCCG) and osteoporosis (A-TOP). He teaches graduate courses on statistics, clinical trials, and meta-analysis.
 
 He is an advisory expert for the Pharmaceutical and Medical Devices Agency, a councilor for the Japanese Society for Pharmacoepidemiology and the Biometric Society of Japan, and serves on multiple editorial boards.
 
 He works at the intersection of causal inference and clinical research. His recent projects explore survival analysis and g-methods, as well as the way we teach research through stories.
+
+## Why gestimation?
+
+If you’ve ever wondered why my accounts are called *gestimation*, the name comes from **g-estimation** in causal inference — a class of methods introduced by James Robins. In my own work, I have found this approach very useful in clinical research:
+
+- Tanaka S, Matsuyama Y, Shiraki M, Ohashi Y. Estimating the effects of time-varying osteoporosis treatments on incidence of fractures among Japanese postmenopausal women. Epidemiology 2007;18(5):529–36.
+
+- Tanaka S, Brookhart MA, Fine JP. G-estimation of structural nested mean models for competing risks data using pseudo-observations. Biostatistics 2020;21(4):860–75.
+
+- Tanaka S, Brookhart MA, Fine JP. G-estimation of structural nested mean models for interval-censored data using pseudo-observations. Stat Med 2023;42(21):3877–91.
+
+These are not required reading for the stories here, but if you ever feel like following the path from coffee chats → DAGs → g-estimation, this is one of the places it eventually leads.
+
 </div>
 
