--- a/about/index.qmd
+++ b/about/index.qmd
@@ -6,9 +6,10 @@
 }
 </style>
 
+<div class="about-intro">
+
 ## About Shiro Tanaka
 
-<div class="about-intro">
 <img src="../image/portrait.jpg" width="130" style="border-radius: 12px; float:right; margin-left:1rem;"/>
 
 Shiro Tanaka is a biostatistician and currently Professor of Clinical Biostatistics at the Graduate School of Medicine, Kyoto University.
@@ -17,9 +18,9 @@ He has served as a trial statistician in translational research at Kyoto Univers
 
 He is an advisory expert for the Pharmaceutical and Medical Devices Agency, a councilor for the Japanese Society for Pharmacoepidemiology and the Biometric Society of Japan, and serves on multiple editorial boards.
 
-He works at the intersection of causal inference and clinical research. His recent projects explore survival analysis and g-methods, as well as the way we teach research through stories.
+His training in causal inference and survival analysis has been shaped by work that crossed borders freely – books, open-source software, and resources shared by colleagues and collaborators around the world. He has been fortunate to work with researchers such as Marc A. Brookhart, Jason P. Fine, and Thomas H. Scheike. This site is his small way of giving back in the same spirit.
 
-## Why gestimation?
+## Why "gestimation"?
 
 If you’ve ever wondered why my accounts are called *gestimation*, the name comes from **g-estimation** in causal inference — a class of methods introduced by James Robins. In my own work, I have found this approach very useful in clinical research:
 
@@ -27,9 +28,9 @@ If you’ve ever wondered why my accounts are called *gestimation*, the name com
 
 - Tanaka S, Brookhart MA, Fine JP. G-estimation of structural nested mean models for competing risks data using pseudo-observations. Biostatistics 2020;21(4):860–75.
 
-- Tanaka S, Brookhart MA, Fine JP. G-estimation of structural nested mean models for interval-censored data using pseudo-observations. Stat Med 2023;42(21):3877–91.
+- Tanaka S, Brookhart MA, Fine JP. G-estimation of structural nested mean models for interval-censored data using pseudo-observations. Statistics in Medicine 2023;42(21):3877–91.
 
-These are not required reading for the stories here, but if you ever feel like following the path from coffee chats → DAGs → g-estimation, this is one of the places it eventually leads.
+These are not required reading for the stories here. But if you ever feel like following the path from coffee chats → DAGs → g-estimation, this is one of the places it eventually leads.
 
 </div>
 
