--- a/en/Study-design-5.qmd
+++ b/en/Study-design-5.qmd
@@ -157,282 +157,312 @@ Keywords: observational study, outcome, simulation, survival/competing-risk, stu
 
 ### “Hard endpoints” and soft feelings
 
-Me: “I’m home… completely drained.  
-Is there anything sweet?”
+::::::::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+Me: “I’m home...completely drained. Is there anything sweet?”
+::: 
 
+::: voice-father
 Dad: “There’s a strawberry daifuku. And I just brewed coffee.”
+::: 
 
-Me: “You are objectively improving my quality of life.  
-Today was rough. Clinic was packed, and the train home was rush-hour level insane.”
+::: voice-daughter
+Me: “You are objectively improving my quality of life. Today was rough. Clinic was packed, and the train home was rush-hour level insane.”
+::: 
 
-Dad: “That sounds like classic Japanese hospital plus Tokyo commute.  
-Here, coffee.”
+::: voice-father
+Dad: “That sounds like classic Japanese hospital plus Tokyo commute. Here, coffee.”
+::: 
 
-Me: “Thanks.  
-So, there’s something I wanted to ask.  
+::: voice-daughter
+Me: “Thanks. So, there’s something I wanted to ask. You know how people in oncology love to say **‘hard endpoint’** and **‘soft endpoint’**?”
+::: 
 
-You know how people in oncology love to say **‘hard endpoint’** and **‘soft endpoint’**?”
-
+::: voice-father
 Dad: “Yes, people say that a lot.”
+::: 
 
-Me: “One of my senior colleagues is really into clinical trials.  
-She keeps saying things like:
+::: voice-daughter
+Me: “One of my senior colleagues is really into clinical trials. She keeps saying things like:
 
 > ‘Return-to-work is such a **soft endpoint**.  
 > OS is a **hard endpoint**.  
 > Soft is bad, hard is good.’
 
-And every time she says that,  
-I feel like my return-to-work study is being gently dissed.  
+And every time she says that, I feel like my return-to-work study is being gently dissed. I sort of get what she means, but not really.”
+::: 
 
-I sort of get what she means, but not really.”
+::: voice-father
+Dad: “I can imagine the tone. The way people use those words is a bit loose. If we want to be clearer, it might help to think in terms of **objective measure** vs **subjective measure**.”
+::: 
 
-Dad: “I can imagine the tone.  
-
-The way people use those words is a bit loose.  
-If we want to be clearer,  
-it might help to think in terms of:
-
-- **objective** vs  
-- **subjective**.”
-
+::: voice-daughter
 Me: “So OS is ‘hard’ because it’s objective?”
+::: 
 
-Dad: “Pretty much.  
+::: voice-father
+Dad: “Pretty much. For **overall survival (OS)**, you only need date of death or the last date of confirmation of being alive. That’s relatively straightforward. For something like **progression-free survival (PFS)**, you need to decide **when progression happened**. That depends on factors unrelated to disease status:"
+::: 
 
-For **overall survival (OS)**, you only need:
+- imaging timing
+- how you interpret the scans
+- sometimes even symptoms unrelated to cancer
 
-- date of death, and  
-- date of last confirmation of being alive.
+::: voice-father
+Dad: “There’s more **judgment** involved. That’s why people call it a **soft endpoint**.”
+::: 
 
-That’s relatively straightforward.
+::: voice-daughter
+Me: “And return-to-work is even more ‘soft’, right? We’re asking about patients’ own perceptions, jobs, feelings...”
+::: 
 
-For something like **progression-free survival (PFS)**,  
-you need to decide **when progression happened**.  
-That depends on:
-
-- imaging timing,  
-- how you interpret the scans,  
-- sometimes even symptoms and lab data.
-
-There’s more **judgment** involved.  
-That’s why people call it a **soft endpoint**.”
-
-Me: “And return-to-work is even more ‘soft’, right?  
-We’re asking about patients’ own perceptions, jobs, feelings…”
-
-Dad: “Right, but that doesn’t make it meaningless.  
-
-I think what your colleague *meant* was something like:
+::: voice-father
+Dad: “Right, but that doesn’t make it meaningless. I think what your colleague *meant* was something like:
 
 > ‘When you work with soft endpoints,  
 > try to measure them as **consistently** and **objectively** as possible.’”
+::: 
 
+::: voice-daughter
 Me: “So not ‘soft = trash’, but ‘soft = more room for bias, so be careful’.”
+::: 
 
-Dad: “Exactly.  
+::: voice-father
+Dad: “Exactly. Even ‘hard’ endpoints like death can be biased if follow-up is sloppy. If, for example, you only track deaths in patients who keep coming to the hospital, you might systematically **miss deaths** in those who stop showing up. So hard endpoints are not automatically free of bias.”
+::: 
 
-Even ‘hard’ endpoints like death can be biased  
-if follow-up is sloppy.
+::: voice-daughter
+Me: “Okay, that makes me feel better about my study. I’ll phrase it as: *‘a soft endpoint, measured with hard discipline.’*”
+::: 
 
-If, for example, you only track deaths in patients  
-who keep coming to the hospital,  
-you might systematically **miss deaths**  
-in those who stop showing up.
+::: voice-father
+Dad: “That’s actually a great line for the methods section. To be precise, you don’t need perfect information on every death. What matters is that the process of collecting death information is not related to patients’ health status.
+If whether we obtain death information depends on how sick someone was, that creates bias.”
+::: 
 
-So:
+::: voice-daughter
+Me: “It means censoring is no longer independent of prognosis, right? ”
+::: 
 
-- ‘Hard’ ≠ ‘automatically free of bias’  
-- ‘Soft’ ≠ ‘automatically useless’.”
+::: voice-father
+Dad: “Yes. Remember the **Kaplan–Meier** and **Aalen–Johansen** curves I showed you? Those estimators can handle censoring, but they only remain unbiased if censoring occurs randomly, unrelated to the outcome. For example, when all patients are censored at 1 year because the study ends, or when an external reason stops follow-up for some patients.”
+:::
 
-Me: “Okay, that makes me feel better about my study.  
-I’ll phrase it as: *‘a soft endpoint, measured with hard discipline.’*”
+::: voice-daughter
+Me: “I get the idea. But there are situations where we just can’t track deaths perfectly. We can only do our best.”
+:::
 
-Dad: “That’s actually a great line for the methods section.”
+### Bias in Kaplan–Meier curves
 
----
+::: voice-daughter
+Me: “Okay...besides that, what other types of bias should I be careful about in my survey?”
+:::
+
+::: voice-father
+Father: “As I said before—competing risks. In time-to-event data, ignoring competing risks can lead to bias. Can you take out your laptop?”
+:::
+
+::: voice-daughter
+Me: “What? I literally just came back from work...”
+:::
+
+::: voice-father
+Father: “It’ll be quick. I’ll tweak the R script we used last time and show you what statistical bias looks like with a simple simulation.”
+:::
+:::::::::::::::::::::::::::::::::
+
+
+::: {.callout-note appearance="simple" title="Bias of the Kaplan–Meier curve in a simulated dataset with recurrence and competing risks"}
+In our previous simulations of cumulative incidence of recurrence (CIR), we generated patients who could die before experiencing recurrence (a competing risk). With a simple experiment, you can confirm that the Kaplan–Meier estimator becomes biased in the presence of competing risks.
+:::
+
+::: {.callout-note appearance="simple"  collapse="true" title="Code of generate_data() used for data generation"}
+```{r warning=FALSE}
+generate_data <- function(n=200, hr1, hr2) {
+  stoma <- rbinom(n, size = 1, prob = 0.4)
+  sex <- rbinom(n, size = 1, prob = 0.5)
+  age <- rnorm(n, mean = 65 + 3 * stoma, sd = 8)
+  hazard_relapse   <- ifelse(stoma == 1, hr1*0.10, 0.10) # hazard for relapse
+  hazard_death     <- ifelse(stoma == 1, hr2*0.10, 0.10) # hazard for death
+  hazard_censoring <- 0.05                               # hazard for censoring
+  
+  # Latent times to relapse, death, and censoring ----------------
+  t_relapse   <- rexp(n, rate = hazard_relapse)
+  t_death     <- rexp(n, rate = hazard_death)
+  t_censoring <- rexp(n, rate = hazard_censoring)
+
+  ## --- Overall survival (OS) -----------------------------------
+  time_os   <- pmin(t_death, t_censoring)
+  status_os <- as.integer(t_death <= t_censoring)  # 1 = death, 0 = censored
+  
+  ## --- Relapse-free survival (RFS) -----------------------------
+  time_rfs <- pmin(t_relapse, t_death, t_censoring)
+  
+  status_rfs <- integer(n)
+  status_rfs[time_rfs == t_relapse & time_rfs < t_censoring] <- 1 # relapse
+  status_rfs[time_rfs == t_death & time_rfs < t_censoring] <- 1   # death
+  
+  ## --- Cumulative incidence of relapse (CIR) -------------------
+  time_cir <- pmin(t_relapse, t_death, t_censoring)
+  
+  status_cir <- integer(n)
+  status_cir[time_cir == t_relapse & time_cir < t_censoring] <- 1 # relapse
+  status_cir[time_cir == t_death & time_cir < t_censoring] <- 2   # death (competing risk)
+
+  dat <- data.frame(
+    id         = 1:n,
+    sex        = factor(sex, levels = c(0, 1), labels = c("WOMAN", "MAN")),
+    age        = age,
+    stoma      = factor(stoma, levels = c(0, 1),
+                        labels = c("WITHOUT STOMA", "WITH STOMA")),
+    time_os    = time_os,
+    status_os  = status_os,
+    time_rfs   = time_rfs,
+    status_rfs = status_rfs,
+    time_cir   = time_cir,
+    status_cir = status_cir
+  )
+  return(dat)
+}
+```
+:::
+
+::: {.callout-note appearance="simple" title="Aalen-Johansen curves for cumulative incidence of relapse (CIR)"}
+Kaplan–Meier曲線とAalen-Johansen曲線は、どちらも`cifmodeling`パッケージの`cifplot()`を使って生成できますが、イベントのコーディングを入力する`code.event1`、`code.event2`とデータの型を表す`outcome.type`を、指定する必要があります。`generate_data()`で生成したシミュレーションデータでは、CIRのイベントは以下のようにコーディングされていました。
+
+- `status_cir=1` : 再発
+- `status_cir=2` : 再発を経験しない死亡
+- `status_cir=0` : 打ち切り
+
+以下のRスクリプトでは、最初の`cifplot()`により、再発（`code.event1=1`）に関するAalen-Johansen曲線（`aj_event1`）を出力しています。縦軸は累積発生確率ではなく、1-累積発生確率を選んでいる点にも注意してください（`type.y="surv"`）。そして次の`cifplot()`ではイベントを入れ替えて、再発を経験しない死亡（`code.event1=1`）に関するAalen-Johansen曲線（`aj_event2`）を出力し、`cifpanel()`に用いて2つの図を左右に配置したひとつの図を表示しています。左右の累積発生確率の和に注目してください。この図からは、再発の累積発生確率と（再発を経験しない）死亡の累積発生確率の和は、時間が経つにつれ1に近づくが、1を超えることはないことがわかります。仮に打ち切りがなかったとしたら、再発と（再発を経験しない）死亡のどちらか一方しか生じないため、Aalen-Johansen曲線の和が1を超えないのは自然なことです。
+
+```{r}
+# devtools::install_github("gestimation/cifmodeling") #インストールが必要なら実行 
+library(cifmodeling)
+set.seed(46)
+dat <- generate_data(hr1=2, hr2=1.5) #再発ハザード比2, 死亡ハザード比1.5のデータ生成
+
+aj_event1 <- cifplot(Event(time_cir, status_cir) ~ stoma,
+  data         = dat,
+  outcome.type = "competing-risk", 
+  type.y       = "surv",
+  code.event1  = 1, 
+  code.event2  = 2
+)
+aj_event2 <- cifplot(Event(time_cir, status_cir) ~ stoma,
+  data         = dat,
+  outcome.type = "competing-risk", 
+  type.y       = "risk",
+  code.event1  = 2, 
+  code.event2  = 1
+)
+aj_list <- list(aj_event1$plot, aj_event2$plot)
+aj_panel <- cifpanel(rows.columns.panel = c(1,2), plots=aj_list)
+print(aj_panel)
+```
+:::
+
+::: {.callout-note appearance="simple"  title="Kaplan–Meier curves for cumulative incidence of relapse (CIR)"}
+実際の研究では、死亡を打ち切りとして扱った生存時間解析の結果をしばしば目にします。この解析に対応するKaplan–Meier曲線は、以下のようにイベントのコーディングを変更し、`outcome.type="survival"`を指定することで出力できます。
+
+- `status_cir1=1` : 再発
+- `status_cir1=0` : 再発を経験しない死亡/打ち切り
+- `status_cir2=1` : 再発を経験しない死亡
+- `status_cir2=0` : 再発/打ち切り
+
+新しく作ったイベント変数`status_cir1`と`status_cir2`を用いると、再発のKaplan–Meier曲線と（再発を経験しない）死亡のKaplan–Meier曲線を描くことができます。これらのKaplan–Meier曲線を左右に配置した図を、先ほどのAalen-Johansen曲線の図と比べてみてください。Aalen-Johansen曲線の和とは異なり、Kaplan–Meier曲線の和が1を超えていることが読み取れたでしょうか。
+
+```{r}
+dat$status_cir1 <- as.numeric(dat$status_cir==1)
+km_event1 <- cifplot(Event(time_cir, status_cir1) ~ stoma,
+  data         = dat,
+  outcome.type = "survival", 
+  type.y       = "surv"
+)
+dat$status_cir2 <- as.numeric(dat$status_cir==2)
+km_event2 <- cifplot(Event(time_cir, status_cir2) ~ stoma,
+  data         = dat,
+  outcome.type = "survival", 
+  type.y       = "risk"
+)
+km_list <- list(km_event1$plot, km_event2$plot)
+km_panel <- cifpanel(rows.columns.panel = c(1,2), plots=km_list)
+print(km_panel)
+```
+:::
+
+
 
 ### Three familiar troublemakers: selection, information, confounding
 
-Me: “For my **mail survey**, what kinds of bias should I watch out for?”
+::::::::::::::::::::::::::::::::::::::: dialogue
+::: voice-father
+Dad: “Sure. You’re mailing out questionnaires, right? When a lot of patients don’t respond, that introduces bias. For example, are you asking about annual income?”
+:::
 
-Dad: “Mail surveys are especially vulnerable to **selection bias**.”
+::: voice-daughter
+Me: “Maybe.”
+:::
 
-Me: “Because some people just never respond?”
+::: voice-father
+Dad: “Then be careful. Sensitive questions can lower the response rate. If non-response is systematic, your sample no longer represents the target population. For example:"
+::: 
 
-Dad: “Exactly.  
+- Patients who are doing well may be more likely to answer.  
+- Patients who are very sick, depressed, or busy may be less likely to answer.
 
-If the people who respond are systematically different  
-from those who don’t,  
-your sample stops representing your target population.
+::: voice-father
+Dad: “Then your estimated **return-to-work proportion** can be **too optimistic**. Also, suppose patients with a stoma are more likely to return the questionnaire than those without a stoma. Then comparing those two groups could be criticized because of differential response rates.”
+:::
 
-For example:
+::: voice-daughter
+Me: “Is that... confounding?”
+:::
 
-- Patients who are doing well  
-  may be more likely to answer.  
-- Patients who are very sick, depressed, or busy  
-  may be less likely to answer.
+::: voice-father
+Dad: “You know the term? Nice. Confounding is a type of bias, but this is different. When the selection of participants itself depends on certain characteristics, we call it selection bias. And if the information collected is inaccurate—like when people overreport income — that’s information bias. In classes on study design and observational studies, we divide bias into three main categories:
+:::
 
-Then your estimated **return-to-work rate**  
-can be **too optimistic**.”
+- Selection bias
+- Information bias
+- Confounding
 
-Me: “So that’s **selection bias**:  
-bias from how people end up in the analysis dataset.”
+::: voice-father
+Dad: “Most biases fall into one of these three. So when designing a study, we teach students:"
+:::
 
-Dad: “Right.  
+- Make sure you’re not selecting only certain types of people.
 
-Another classic one is **information bias**:  
-problems in how data are **measured or reported**.
+- Collect information in a way that avoids systematic errors.
 
-For example, if you ask about **household income**,  
-some people may exaggerate a bit,  
-and others may under-report.  
-If that pattern is not random,  
-your income variable is systematically off.”
+- When comparing groups, adjust for characteristics other than the variable of interest.
 
-Me: “And confounding is the ‘third variable’  
-that makes cause-and-effect look different from reality.”
+::: voice-father
+Dad: “Keeping these three in mind makes countermeasures much easier.”
+:::
 
-Dad: “Exactly.  
-We talked about that with **stoma** and **age**:
+::: voice-daughter
+Me: “Hmm... selection bias, information bias... Clinical research terminology is so confusing. But I definitely don’t want my survey to fail. I’ll write this down.”
+::: 
+::::::::::::::::::::::::::::::::: 
 
-- Stoma group is older on average.  
-- Older patients are less likely to return to work.
 
-If you just compare stoma vs no-stoma  
-without adjusting for age,  
-you might blame the stoma  
-for what is actually an age effect.  
+::: {.callout-note appearance="simple" title="Random error and bias"}
+Statistics is a discipline of uncertainty, but in clinical research it’s important to distinguish random error from bias.
 
-That’s **confounding**.”
+- Random error: variability centered around the truth. Decreases with larger sample size.
 
-Me: “So in my notes, I’ll write:
+- Bias: a systematic deviation from the truth. Does not disappear unless the study design and data collection are improved.
 
-- **Selection bias**: who ends up in the study  
-- **Information bias**: how variables are measured  
-- **Confounding**: third-factor distortion of group comparisons.”
+A helpful analogy: Random error is like the spread of arrows around the bull’s-eye. Bias is when you’re consistently aiming off-center.
 
-Dad: “Perfect summary.  
+The bias you observed in the Kaplan–Meier curve under competing risks is not random error.
 
-Those three are the basic troublemakers  
-we want to keep in mind at the **study design** stage.”
+- Reducing random error = increase sample size.
+- Reducing bias = improve study design.
 
----
-
-### Random error vs bias — the archery analogy
-
-Me: “You also mentioned **random error**  
-versus **bias** in one of your lectures.  
-Can you give me the short version?”
-
-Dad: “Sure.
-
-Imagine you’re doing **archery**:
-
-- If your arrows hit all around the target,  
-  but on average around the center,  
-  that’s **random error** — big spread, no systematic shift.
-
-- If your arrows are tightly grouped  
-  but always off to the right,  
-  that’s **bias** — systematic deviation.”
-
-Me: “So:
-
-- Random error = noisy but honest  
-- Bias = precise but wrong?”
-
-Dad: “Very nicely put.
-
-- **Random error** can be reduced by  
-  larger sample size and appropriate methods.  
-- **Bias** usually cannot be fixed later  
-  just by fancy statistics.
-
-To reduce bias,  
-you need to:
-
-- design the study carefully, and  
-- collect data thoughtfully.”
-
-Me: “So the job of statistics is not just to compute p-values,  
-but to:
-
-1. keep **random error** under control, and  
-2. keep **bias** as close to zero as possible.”
-
-Dad: “Exactly.  
-If you ignore bias,  
-no amount of R code will save you.”
-
-Me: “I’ll remember that  
-when I’m tempted to ‘fix’ everything with another regression.”
-
----
-
-### A small quiz about bias
-
-Which of the following best illustrates **selection bias**  
-in your return-to-work survey?
-
-1. Patients who are worried about their income  
-   tend to slightly exaggerate their salary on the questionnaire.  
-2. Older patients are more likely to have a stoma,  
-   and older patients are less likely to return to work.  
-3. Patients who are already back at work  
-   are much more likely to return the questionnaire  
-   than patients who are not working.  
-4. Different doctors interpret the same CT scans differently  
-   when judging tumor progression.  
-
-**Answer**
-
-The best example of **selection bias** is **3**.
-
-- **1**: Patients misreporting their salary  
-  → **information bias**  
-- **2**: Age distorting the stoma–return-to-work relationship  
-  → **confounding**  
-- **3**: Return-to-work status affects who responds  
-  → **selection bias**  
-- **4**: Differences in how progression is judged  
-  → another form of **information bias**
-
-In real studies,  
-more than one type of bias can be present at the same time,  
-which is why good design and cautious interpretation matter.
-
----
-
-### Wrapping up the “Study design” mini-series
-
-Me: “Okay, so if I try to summarize this whole Study design arc:
-
-1. Start from a **clinical question**,  
-   and turn it into a **research hypothesis** using PICO/PECO.  
-2. Decide what kind of **outcome** you’re using  
-   (continuous, binary, count, survival / competing risks),  
-   and pick methods that match.  
-3. Think carefully about **time origin** and **endpoints**  
-   – OS / DFS / PFS / soft vs hard.  
-4. Pay attention to **data type**, **repeated measures**,  
-   and **confounding** when choosing models.  
-5. Design the study to minimize **selection bias**, **information bias**,  
-   and **confounding**,  
-   and remember:  
-   statistics can’t magically erase a bad design.”
-
-Dad: “That’s an excellent summary.  
-If you walk into your first study with that much in your head,  
-you’re already ahead of where many people start.”
-
-Me: “Good.  
-Then I’ll keep using you as my in-house statistician,  
-if that’s okay.”
-
-Dad: “As long as the coffee keeps coming, deal.”
-
----
+That is one of the central themes of this Story.
+:::
 
 ### This concludes the Study Design series. If you’d like to keep reading over your next cup of coffee, the following episodes are waiting:
 
