--- a/about/index.qmd
+++ b/about/index.qmd
@@ -14,9 +14,7 @@
 
 Shiro Tanaka is a biostatistician and currently Professor of Clinical Biostatistics at the Graduate School of Medicine, Kyoto University.
 
-He has served as a trial statistician in translational research at Kyoto University Hospital, as well as in nationwide clinical trial groups in oncology (JCOG), pediatric oncology (JCCG) and osteoporosis (A-TOP). He teaches graduate courses on statistics, clinical trials, and meta-analysis.
-
-He is an advisory expert for the Pharmaceutical and Medical Devices Agency, a councilor for the Japanese Society for Pharmacoepidemiology and the Biometric Society of Japan, and serves on multiple editorial boards.
+He has served as a trial statistician in translational research at Kyoto University Hospital, as well as in nationwide clinical trial groups in oncology (JCOG), pediatric oncology (JCCG) and osteoporosis (A-TOP). He is an advisory expert for the Pharmaceutical and Medical Devices Agency, a councilor for the Japanese Society for Pharmacoepidemiology and the Biometric Society of Japan, and serves on multiple editorial boards.
 
 His training in causal inference and survival analysis has been shaped by work that crossed borders freely – books, open-source software, and resources shared by colleagues and collaborators around the world. He has been fortunate to work with researchers such as Marc A. Brookhart, Jason P. Fine, and Thomas H. Scheike. This site is his small way of giving back in the same spirit.
 
