--- a/jp/study-design-5.qmd
+++ b/jp/study-design-5.qmd
@@ -182,7 +182,7 @@ Keywords: observational study, outcome, simulation, survival/competing-risk, stu
 :::
 
 ::: voice-daughter
-私「臨床試験にあこがれてる先輩がいてね、復職状況はソフトなエンドポイントだからだめだ、OSはハードなエンドポイントだからいいんだ、みたいな言い方をするのよ。私の調査が否定されてるみたいなんだけど、どういうことなのか、よくわかんなくて」
+私「臨床試験にあこがれてる先輩がいてね、復職状況はソフトなエンドポイントだからだめだ、全生存期間（OS）はハードなエンドポイントだからいいんだ、みたいな言い方をするのよ。私の調査が否定されてるみたいなんだけど、どういうことなのか、よくわかんなくて」
 :::
 
 ::: voice-father
@@ -194,7 +194,7 @@ Keywords: observational study, outcome, simulation, survival/competing-risk, stu
 :::
 
 ::: voice-father
-お父さん「よくある議論を挙げると、OSはハード、PFS（無増悪生存期間）はソフトというのがある。OSは死亡日と最終生存確認日だけで決まるから、ハードなエンドポイント。PFSでは、死亡とがんの増悪がイベントとして定義されるんだけど、そうするとデータを集めるために増悪日の情報が必要になる。ところが臨床的には増悪がいつ起きたかは、主観的に判断されるケースがあるよね。全身状態や腫瘍マーカーが悪化したりするケースだね。臨床試験で、こういうケースをイベントとみなすかは議論がわかれるけど、意見がわかれること自体でPFSはソフトなエンドポイントっていう人もいるね」
+お父さん「よくある議論を挙げると、OSはハード、無増悪生存期間（PFS）はソフトというのがある。OSは死亡日と最終生存確認日だけで決まるから、ハードなエンドポイント。PFSでは、死亡とがんの増悪がイベントとして定義されるんだけど、そうするとデータを集めるために増悪日の情報が必要になる。ところが臨床的には増悪がいつ起きたかは、主観的に判断されるケースがあるよね。全身状態や腫瘍マーカーが悪化したりするケースだね。臨床試験で、こういうケースをイベントとみなすかは議論がわかれるけど、意見がわかれること自体でPFSはソフトなエンドポイントっていう人もいるね」
 :::
 
 ::: voice-daughter
@@ -221,18 +221,58 @@ Keywords: observational study, outcome, simulation, survival/competing-risk, stu
 お父さん「そうそう。もっと具体的にいうとね、死亡に至るまで100%の情報を集める必要はないんだ。でも、それは死亡情報の収集に偏りがないときだけ。**死亡情報が集まるかどうかが、患者の健康状態に依存してしまうと、バイアスの原因になる。**これは生存時間データの打ち切りが、ランダムでなくなるからなんだ。この前、RのKaplan-Meier曲線とAalen-Johansen曲線をみせたよね。あの曲線は、打ち切りがあっても描ける。でもバイアスがなく正確であるためには、打ち切りが、病状や予後とは関係なくランダムに起きていることが前提になってる。たとえば追跡期間が1年って決まっていて、全員1年で打ち切りになるとか、外的要因のため一部の患者で観察が続けられなくなるとかね」
 :::
 
+### バイアスの分類
+
 ::: voice-daughter
-私「情報が偏ったらバイアスっていうのはわかるけど。死亡が特定できないのはどうしようもないときだもの。ベストを尽くすしかないよね」
+私「情報が偏ったらバイアスっていうのはわかるけど。死亡が特定できないのはどうしようもないときだもの。ベストを尽くすしかないよね。じゃあさ、私の調査で、それ以外に気をつけておいた方がいいバイアスってある？」
+:::
+
+::: voice-father
+お父さん「そうだね。調査票を郵送するんでしょ。そういうとき、**回答してくれない患者が多いと偏りが生じやすい**から、回答率を挙げる工夫をするといい。たとえば、調査票で年収って聞いてる？」
+:::
+
+::: voice-daughter
+私「聞くかもしれない」
+:::
+
+::: voice-father
+お父さん「経済状況のようなナイーブな質問内容には十分配慮した方がいいよ。それが理由で回答してくれないと、解析対象集団が調査対象全体を代表しているといえなくなってしまう」
+:::
+
+::: voice-daughter
+私「他には？」
+:::
+
+::: voice-father
+お父さん「他にはね、ストーマ非保有者よりストーマ保有者の方が、調査票への回答率が高くなっちゃうとか。そもそもストーマ非保有者とストーマ保有者の回答率に差があると、これらの集団を比較してもバイアスがあるって批判されるかもしれない」
+:::
+
+::: voice-daughter
+私「それって**交絡**のこと？」
+:::
+
+::: voice-father
+お父さん「交絡ってどこで聞いたの？よく知ってるね。あれもバイアスの一種だけど、今回のとは違う。回答率の差やなにか理由があって回答してくれない場合は、母集団からのサンプル抽出に影響する**選択バイアス**といって、区別されるんだ。それに、年収って尋ねられると、過大申告してしまいがちだよね。このように集めた情報自体に偏りがあることを、**情報バイアス**と呼んでいる。調査や観察研究の計画に関する授業では、バイアスを3種類に大別して考えるといいって教えている。
+:::
+
+- 選択バイアス（selection bias）
+
+- 情報バイアス（information bias）
+
+- 交絡（confounding）
+
+::: voice-father
+実際に研究を行うといろいろ理由でバイアスが生じるけど、研究デザインの段階では、この3つに分けて考えると対策を立てやすい。一部の対象者ばかり選ばれないようにしなさい、情報を集めるときはバイアスが入らないように配慮しなさい、集団を比較するときは、比較したい要因以外の特徴を揃えるようにしなさいってね」
+:::
+
+::: voice-daughter
+私「ふーん？選択バイアス、情報バイアスねえ？やっぱり臨床研究って言葉遣いがよくわかんないな」
 :::
 
 ### Kaplan-Meier曲線のバイアス
 
-::: voice-daughter
-私「私の調査で、それ以外に気をつけておいた方がいいバイアスってある？」
-:::
-
 ::: voice-father
-お父さん「そうだね、前も話したけど競合リスクとかかな？生存時間解析ではイベント・競合リスクの扱いによってバイアスが生じることがある。カバンの中のパソコン出せる？」
+お父さん「やっぱり、バイアスがどれくらい困ったことなのか、やってみないとわからないって感じだね。もう少し時間ある？カバンの中のパソコン出せる？」
 :::
 
 ::: voice-daughter
@@ -240,7 +280,7 @@ Keywords: observational study, outcome, simulation, survival/competing-risk, stu
 :::
 
 ::: voice-father
-お父さん「前に使ったRスクリプトをいじるだけですぐ終わるから。シミュレーションデータで統計的なバイアスってどんなものか見せてあげるよ」
+お父さん「イベントと競合リスクの扱いによってバイアスが生じるってことをみせてあげるよ。前に使ったRスクリプトをいじるだけですぐ終わるから。論より証拠で、シミュレーションデータをみれば統計的なバイアスってどんなものか実感できる」
 :::
 :::::::::::::::::::::::::::::::::
 
@@ -365,57 +405,15 @@ print(km_panel)
 :::
 
 ::::::::::::::::::::::::::::::::: dialogue
-::: voice-daughter
-私「なるほどね。再発確率と死亡確率の和が1を超えることはあり得ないってことは、Kaplan–Meier曲線にバイアスが生じていることの証拠だっていいたいのね。でも、こんなマニアックなバイアスじゃなくて、調査を行う上で何に注意した方がいいか聞いたつもりだったんだけど」
-:::
-
-### バイアスの分類
-
 ::: voice-father
-お父さん「調査票を郵送するんでしょ。そういうとき、**回答してくれない患者が多いと偏りが生じやすい**から、回答率を挙げる工夫をするといい。たとえば、調査票で年収って聞いてる？」
+お父さん「わかった？シミュレーションで使った確率分布は、研究でなにが起きるかを抽象化した数理モデルなんだ。どんな統計手法も使用条件みたいなものがあって、前提にしている数理モデルからずれるとバイアスが生じる。モデルの誤特定なんて言い方をするね」
 :::
 
 ::: voice-daughter
-私「聞くかもしれない」
-:::
-
-::: voice-father
-お父さん「経済状況のようなナイーブな質問内容には十分配慮した方がいいよ。それが理由で回答してくれないと、解析対象集団が調査対象全体を代表しているといえなくなってしまう。他にはね、ストーマ非保有者よりストーマ保有者の方が、調査票への回答率が高くなっちゃうとか。そもそもストーマ非保有者とストーマ保有者の回答率に差があると、これらの集団を比較してもバイアスがあるって批判されるかもしれない」
-:::
-
-::: voice-daughter
-私「それって**交絡**のこと？」
-:::
-
-::: voice-father
-お父さん「交絡ってどこで聞いたの？よく知ってるね。あれもバイアスの一種だけど、今回のとは違う。回答率の差やなにか理由があって回答してくれない場合は、母集団からのサンプル抽出に影響する**選択バイアス**といって、区別されるんだ。それに、年収って尋ねられると、過大申告してしまいがちだよね。このように集めた情報自体に偏りがあることを、**情報バイアス**と呼んでいる。調査や観察研究の計画に関する授業では、バイアスを3種類に大別して考えるといいって教えている。
-:::
-:::::::::::::::::::::::::::::::::
-
-- 選択バイアス（selection bias）
-
-- 情報バイアス（information bias）
-
-- 交絡（confounding）
-
-::::::::::::::::::::::::::::::::: dialogue
-::: voice-father
-実際に研究を行うといろいろ理由でバイアスが生じるけど、研究デザインの段階では、この3つに分けて考えると対策を立てやすい。一部の対象者ばかり選ばれないようにしなさい、情報を集めるときはバイアスが入らないように配慮しなさい、集団を比較するときは、比較したい要因以外の特徴を揃えるようにしなさいってね」
-:::
-
-::: voice-daughter
-私「ふーん？選択バイアス、情報バイアスねえ？やっぱり臨床研究って言葉遣いがよくわかんないな。でも、自分の調査で失敗したくないから、メモしておくよ」
+私「なるほどね。再発確率と死亡確率の和が1を超えることはあり得ないよ、Kaplan–Meier曲線にバイアスが生じていることの証拠だよっていいたいのね。でも、こんなマニアックなバイアスじゃなくて、調査を行う上で何に注意した方がいいか聞いたつもりだったんだけど」
 :::
 ::::::::::::::::::::::::::::::::: 
 
-::: {.callout-note appearance="simple"  title="ランダム誤差とバイアス"}
-
-統計学は誤差を扱う学問ですが、臨床研究ではランダム誤差（random error）とバイアス（bias）を区別することが大切です。ランダム誤差は、基本的にはゼロを中心としたばらつきを想定しています。一方で、得られた推定値が真の値から系統的にずれていることを、バイアスといいます。臨床研究における統計学の目標は、ランダム誤差を制御し、バイアスを可能な限りゼロに近づけることです。
-
-たとえるなら、ランダム誤差は的の中心を狙って矢を放つときのばらつき、バイアスは狙いが中心からずれている状態といえます。競合リスクの扱いを間違ったとき生じるKaplan-Meier曲線のバイアスは、ランダム誤差ではありませんよね。ランダム誤差はサンプルサイズを大きくすることで減少させることができますが、バイアスは研究デザインやデータ収集方法を工夫しないと、解消できません。これが"Study design"シリーズの最後のテーマでした。
-
-![](study-design-5.png)
-:::
 ### This concludes the Study Design series. If you’d like to keep reading over your next cup of coffee, the following episodes are waiting:
 
 - [Reading a Paper over a Cup of Coffee]
