--- a/jp/logistic-regression-2.qmd
+++ b/jp/logistic-regression-2.qmd
@@ -276,6 +276,48 @@ $\log(\frac{\pi_i}{1-\pi_i})=\beta_0+\beta_1X_{i}$
 ::: 
 ::::::::::::::::::::::::::::::::: 
 
+
+::: {.callout-note appearance="simple" title="データの型と統計手法"}
+
+アウトカムはデータの型によって4種類に分類されます。
+
+- 連続データ （例：血圧やQOL）
+- 分類データ （例：有害事象の有無）
+- 計数データ （例：有害事象の発生件数）
+- 生存時間データ （例：全生存期間）
+
+さらに、分類データはいくつかの種類があり、カテゴリが2通りのものを2値データ、カテゴリに順序があるものを順序データと呼んでいます。生存時間データの一種には、競合リスクを考慮した競合リスクデータがあります。データの型によって、正規分布や2項分布など確率分布が異なりますよね。そのため、それぞれ異なる統計手法が用いられます。詳しくは表をみてください。
+
+仮に、ストーマ造設あり・なしと復職状況の関係を調べたいとすると、2つの変数をモデルに当てはめることになるため、回帰モデルを用いて調べたいとします。このときアウトカムを復職の有無（2値データ）とするなら、ロジスティック回帰を選ぶべきです。もし復職までの期間（生存時間データ）とするなら、Cox回帰の方が適切です。
+
+**個人内で反復測定があるか**
+
+同一個人にくり返し臨床検査やアンケートを行うと、似たような検査結果になりますよね。たとえば、朝と晩に血圧を測ると、2つの測定値に相関が生じます。治療前と治療後に、QOL質問票に回答してもらう場合も、その測定値は独立ではありません。このように1人の患者に複数回の測定値があるデータを反復測定データといいます。反復測定データでは、個人内の測定値は独立ではありません。したがって、独立性を仮定している統計手法（たとえば対応のないt検定や$\chi^2$検定）は不適切です。反復測定データの解析では、変量効果モデル（random-effects model）や一般化推定方程式（generalized estimating equation）と呼ばれるやや高度な手法が用いられます。この場合の変量効果は、「ひとりひとりの個人の効果」を表しています。これらの方法は、個人内でデータが独立ではないこと（データの相関）を考慮するものです。
+
+**交絡の調整が必要かどうか**
+
+交絡因子（confounder）とは、治療とアウトカムとの関係を歪める第三の因子のことです。仮に、ストーマ造設あり・なしと復職状況の関係に、年齢が強くかかわっているとしましょう。そして、ストーマ保有者と非保有者で、平均年齢が異なっているとします。このような場合、2群間の年齢の違いを無視するとバイアスが生じます。これを補正するために、ロジスティック回帰がよく用いられます。 ランダム化臨床試験では、比較する群間で実験条件が揃っているため、交絡の調整は不要です。一方、観察研究（コホート研究やケース・コントロール研究）では交絡の調整は必須です。今回題材にした復職率の調査も観察研究の一種ですから、統計解析ではロジスティック回帰やCox回帰が主に用いられるでしょう。最近では交絡を調整して、正しく因果関係を調べるために、因果推論の手法（プロペンシティスコアなど）を用いることが増えてきました（田中2022）。
+
+| データの型 | 反復測定 | 交絡調整 | 統計手法 | 備考 |
+|---------------|---------------|---------------|---------------|---------------|
+| 連続データ | なし | なし | 対応のない*t*検定、Wilcoxon順位和検定 | 平均の比較 |
+|  | 個人内で2回測定 | なし | 対応のない*t*検定、Wilcoxon順位和検定 | 対応のあるデータ |
+|  | なし | なし | 正規線型モデル | 回帰モデルの一種 |
+|  | あり | あり | 変量効果モデル、一般化推定方程式 | 回帰モデルの一種 |
+| 2値データ | なし | なし | $\chi^2$検定 | 割合の比較 |
+|  | 個人内で2回測定 | あり | McNemar検定 | 対応のあるデータ |
+|  | なし | あり | ロジスティック回帰 | 回帰モデルの一種 |
+|  | あり | あり | 変量効果モデル、一般化推定方程式 | 回帰モデルの一種 |
+| 計数データ | なし | なし | $\chi^2$検定 | 発生率の比較 |
+|  | なし | あり | Poisson回帰 | 回帰モデルの一種 |
+|  | あり | あり | 変量効果モデル、一般化推定方程式 | 回帰モデルの一種 |
+| 生存時間データ | なし | なし | Kaplan-Meier曲線 | 生存曲線の記述 |
+|  | なし | あり | Cox回帰 | 回帰モデルの一種 |
+| 競合リスクデータ | なし | なし | Aalen-Johansen曲線 | 累積発生率曲線の記述 |
+|  | なし | あり | Fine-Grayモデル | 回帰モデルの一種 |
+:::
+
+
 ::: {.callout-note title="このエピソードに関係するクイズです"}
 
 脳卒中発症の有無をアウトカム、LDLコレステロールを共変量としてロジスティック回帰を当てはめたとします。LDLコレステロールの単位をmg/dLからmmol/Lに変換したとき、オッズ比は何倍になるでしょうか。ただし
