--- a/jp/effects-4.qmd
+++ b/jp/effects-4.qmd
@@ -252,7 +252,15 @@ $\pi_1$と$\pi_2$のどちらかが0.2を超えると、リスク比とオッズ
 :::
 
 ::: voice-father
-お父さん「リスク比を推定することが目的なら、オッズ比の平方根を論文で示してもいいかもって気はする。推定方法の一種として、論文のMethodsで説明していればね。でも、よっぽど特殊な状況じゃなければ、リスク比を計算するのが素直だと思うけど。前回話したように、層別などの調整を行うとき、リスク比はとても扱いやすい指標だからね」
+お父さん「リスク比を推定することが目的なら、オッズ比の平方根を論文で示してもいいかもって気はする。推定方法の一種として、論文のMethodsで説明していればね。でも、よっぽど特殊な状況じゃなければ、リスク比を計算するのが素直だと思うけど」
+:::
+
+::: voice-daughter
+私「そう？私の周りではオッズ比の方がよく聞くけど？まあ胃がんや大腸がんの研究だと、ハザード比（hazard ratio）をダントツよく使うけど」
+:::
+
+::: voice-father
+お父さん「オッズ比が出てくるのは疫学の教科書とか国試対策でしょ。あれはケース・コントロール研究を教える都合ってだけだよ。リスクって疾患や死亡が起きる確率そのものでしょ。その差や比を直接とったリスク差・リスク比が基本だって理解しとかないと、単なる暗記になっちゃう。ハザード比は、ハザード関数（hazard function）を理解しないと取扱注意だし、前回話したように、層別などの調整を行うとき、リスク比はとても扱いやすい指標だからね」
 :::
 ::::::::::::::::::::::::::::::::: 
 
