--- a/jp/effects-2.qmd
+++ b/jp/effects-2.qmd
@@ -195,9 +195,9 @@ Keywords: binary outcome, effect measure, observational study, scientific writin
 ::: {.callout-note appearance="simple"  title="寄与割合とその関連指標1. 集団寄与割合"}
 疫学研究では、一般集団を対象にして、環境物質や生活習慣といったリスク因子を調べることが多く、そのために寄与割合（attributable fraction/excess fraction）という指標も用いられます。寄与割合は、特定の集団におけるリスク因子への曝露が、どのくらい疾患発症に寄与するかを表す指標です。ただし、寄与割合には、歴史的に異なる定義のものが複数あり、どのような集団をターゲットとするかで計算方法も変わるので、じゅうぶん意味を確認する必要がある指標です。
 
-あるリスク因子が国民全体の疾患発症にどの程度寄与するかを反映する指標は、population attributable fractionと呼ばれています。ここで$RR$はリスク比、$p$は集団全体のうち群1が占める割合を意味しています。
+あるリスク因子が国民全体の疾患発症にどの程度寄与するかを反映する指標は、集団寄与割合（population attributable fraction）と呼ばれています。ここで$RR$はリスク比、$p$は集団全体のうち群1が占める割合を意味しています。
 
--   Population attributable fraction
+-   集団寄与割合（population attributable fraction）
 
 $$
 PAF=\frac{p(RR-1)}{p(RR-1)+1}
@@ -217,14 +217,14 @@ $$
 ::: {.callout-note appearance="simple"  title="寄与割合とその関連指標2. 集団全体とはターゲット集団が別の寄与割合"}
 曝露がリスク因子として働くときに用いられる指標として、多くの疫学の教科書で説明されているのは、以下の定義によるものです。この指標では、群1が曝露あり、群2が曝露なしと考えています。そして、群1から曝露を取り除いたとき、どのくらい疾患が減るかを表しています。
 
--   Excess fraction
+-   過剰寄与割合（excess fraction）
 $$
 EF = \frac{\pi_1 - \pi_2}{\pi_1} = 1 - \frac{1}{RR}
 $$
 
 その一方で、たとえば喫煙に対する禁煙のように、曝露が予防的に作用するとき、以下の指標が用いられます。群1が曝露あり、群2が曝露なしという点は同じですが、ターゲットは群2です。なお、この式はワクチン有効率と同じです。
 
--   Preventable fraction
+-   予防寄与割合（preventable fraction）
 $$
 PF=\frac{\pi_2-\pi_1}{\pi_2}=1-RR
 $$
@@ -236,7 +236,7 @@ $$
 | 指標                | ターゲット集団 | 何を表す？                                                 |
 |---------------------|----------------|------------------------------------------------------------|
 | PAF（集団寄与割合） | 曝露+非曝露    | 集団全体の疾患のうち、どれだけがその曝露のため生じているか |
-| EF（寄与割合）      | 曝露だけ       | 曝露集団のうち、どれだけの割合が曝露のため疾患を生じたか   |
+| EF（過剰寄与割合）      | 曝露だけ       | 曝露集団のうち、どれだけの割合が曝露のため疾患を生じたか   |
 | PF（予防寄与割合）  | 曝露だけ       | 曝露集団のうち、どれだけ予防的な曝露が疾患を防いだか       | 
 :::
 
@@ -272,7 +272,7 @@ $$
 :::
 
 ::: voice-father
-お父さん「でしょ。それにね、疾患リスクで考えるから混乱しがちなのかもしれない。たとえ話をさせてよ。60歳になってがん検診にきた人が4人いたとする。話をわかりやすくするために、4人の健康状態はまったく同じだとしよう。そのうち、最初の2人はがん検診が陽性で、根治切除できたとする。その後、71歳と79歳まで生きることができた。つまり、がん検診後の生存期間は11年と19年」
+お父さん「でしょ。それにね、ただの計算式とみちゃうとかえって混乱しがちかもしれない。たとえ話をさせてよ。60歳になってがん検診にきた人が4人いたとする。話をわかりやすくするために、4人の健康状態はまったく同じだとしよう。そのうち、最初の2人はがん検診が陽性で、根治切除できたとする。その後、71歳と79歳まで生きることができた。つまり、がん検診後の生存期間は11年と19年」
 :::
 
 ::: voice-daughter
@@ -368,7 +368,7 @@ $$
 
 ::: {.callout-note appearance="simple" title="このエピソードに関係するクイズです"}
 
-寄与割合は、excess fractionやpreventable fraction以外に、曝露・非曝露を合わせた集団全体をターゲットにすることもあります（population attributable fraction）。先ほど用いたがん検診の例で考えましょう。仮にがん検診の精度が高くなって、感度を100%にできたとしましょう。先ほどの状況（感度50%）に比べて、検診後15年後に死亡している人数は、4人のうち、どのくらい減ると期待されるでしょうか。
+今回みたように、寄与割合は、excess fractionやpreventable fraction以外に、曝露・非曝露を合わせた集団全体をターゲットにすることがあります（population attributable fraction）。先ほど用いたがん検診の例で考えましょう。仮にがん検診の精度が高くなって、感度を100%にできたとしましょう。先ほどの状況（感度50%）に比べて、検診後15年後に死亡している人数は、4人のうち、どのくらい減ると期待されるでしょうか。
 
 1.  0%
 2.  33%
