--- a/jp/frequentist-1.qmd
+++ b/jp/frequentist-1.qmd
@@ -199,7 +199,7 @@ Keywords: clinical trial, p-value, survival/competing-risk
 :::
 
 ::: voice-father
-お父さん「これは結構難しいな。臨床試験で解析対象から除外されるって、プロトコール逸脱とかよっぽどのことだと思うけど。ふむ。DFSの解析を行うには再発したかどうかを評価しないといけないよね。そのあたり、なにか理由はありそう？」
+お父さん「これは結構難しいな。臨床試験で解析対象から除外されるって、プロトコール逸脱とかよっぽどのことだと思うけど。コーヒーおかわりくれる？ふむ。DFSの解析を行うには再発したかどうかを評価しないといけないよね。そのあたり、なにか理由はありそう？」
 :::
 
 ::: voice-daughter
