--- a/jp/frequentist-2.qmd
+++ b/jp/frequentist-2.qmd
@@ -160,7 +160,7 @@ Keywords: clinical trial, p-value, survival/competing-risk
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「お父さん、コーヒーのおかわり淹れたよ。続けてJCOG9502のハザード比について教えてよ」
+私「お父さん、コーヒーもう一杯、淹れ直したよ。続けてJCOG9502のハザード比について教えてよ」
 :::
 
 ::: voice-father
@@ -256,11 +256,19 @@ summary(fit)
 :::
 
 ::: voice-father
-お父さん「そういうことだね。ハザードはイベント/観察人年で求める“率”で、ハザード比はその2群間の“比”だから。似たような指標のオッズ比やリスク比は、時間経過を考慮しないから、生存時間解析には使われない。がんの臨床試験データの解析を勉強するなら、米国で有名な臨床試験グループ（SWOG）の統計家が書いた臨床試験の教科書がいいよ（Green, et al. 2013）」
+お父さん「そういうことだね。ハザードはイベント/観察人年で求める“率”で、ハザード比はその2群間の“比”だから。生存時間解析で使う指標だね」
 :::
 
 ::: voice-daughter
-私「p値は0.05より小さいと統計学的に有意なんでしょ。つまり、LTA群の方が、治療成績が悪かったけど、p値をみると2群に有意差はないんだよね」
+私「うんうん。でもそういうのって統計の教科書に書いてないよね。平均とか回帰係数ばっかり」
+:::
+
+::: voice-father
+お父さん「分野によって使われる統計手法が違うからね。がんの臨床試験データの解析を勉強するなら、米国で有名な臨床試験グループ（SWOG）の統計家が書いた臨床試験の教科書がいいよ（Green, et al. 2013）」
+:::
+
+::: voice-daughter
+私「話を戻すとさ。p値は0.05より小さいと統計学的に有意なんでしょ。つまり、LTA群の方が、治療成績が悪かったけど、p値をみると2群に有意差はないんだよね」
 :::
 
 ::: voice-father
@@ -276,11 +284,11 @@ summary(fit)
 :::
 
 ::: voice-daughter
-私「それでいいんじゃない？」
+私「それでいいんじゃない？p値が0.05だったら100回に5回は正しい」
 :::
 
 ::: voice-father
-お父さん「さっきの生存曲線を見ると、差がある確率より、差がない確率の方が高そうだもの。ここではね、もう少し厳密に考えてみてほしいんだ。“LTA群とTH群に生存曲線に差がない”っていう命題や仮説は、確率変数かな？確率変数ではないよね。命題は、正しいかどうかのどちらかしかないもの。確率変数ではないのに、確率が定義されるのは学問的におかしい」
+お父さん「さっきの生存曲線を見ると、差がある確率より、差がない確率の方が高そうだもの。ここではね、言葉を正確に選んで考えてみてほしいんだ。“LTA群とTH群に生存曲線に差がない”っていう命題や仮説は、確率変数かな？確率変数ではないよね。命題は、正しいかどうかのどちらかしかないもの。確率変数ではないのに、確率が定義されるのは学問的におかしい」
 :::
 
 ::: voice-daughter
@@ -288,7 +296,15 @@ summary(fit)
 :::
 
 ::: voice-father
-お父さん「うんうん。じゃあ別の次の説明をして見てみよう。p値が小さいことは、“科学的に重要な知見が得られたこと”を意味すると思う？」
+お父さん「うんうん。じゃあ100回に5回ってどういう意味でいった？」
+:::
+
+::: voice-daughter
+私「へ。言葉通りだけど？JCOG9502を100回やったらどうなるかって意味」
+:::
+
+::: voice-father
+お父さん「その通り。同じ試験を100回繰り返したらp値が100個出てくるでしょ。これがこの場合の確率の定義なんだ。頻度論的確率っていって。じゃあ次。p値が小さいことは、“科学的に重要な知見が得られたこと”を意味すると思う？」
 :::
 
 ::: voice-daughter
@@ -308,7 +324,7 @@ summary(fit)
 :::
 
 ::: voice-daughter
-私「そういう意味で言ったわけじゃないけど」
+私「そういう意味でいったわけじゃないけど」
 :::
 
 ::: voice-father
@@ -336,7 +352,7 @@ summary(fit)
 :::
 
 ::: voice-father
-お父さん「日本では、歴史的に薬事承認の根拠として非劣性試験を行っていた時期があってね。この経験を踏まえると研究仮説と統計的な判断基準の関係は、厳密に考えないとまずいと思うんだ」
+お父さん「これは日本の話なんだけど。昔、薬事承認の根拠として非劣性試験を行っていた時代があってね。その時代の経験を踏まえると、研究仮説と統計的な判断基準の関係は、厳密に考えとかないとちょっとまずいと思うんだ」
 :::
 ::::::::::::::::::::::::::::::::::::
 
